# banana-extension-fx-ictax

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  axlabs_banana_ictax_fx_common.js  banana-ictax-fx.js  ch.axlabs.banana.fx.ictax.export.js  ch.axlabs.banana.fx.ictax.import.js  ch.axlabs.banana.ictax-fx.manifest.json  ch.axlabs.banana.ictax-fx.qrc  manifest.json
.github/workflows/: release.yaml
examples/: rates.example.json  requests.example.json
